project card css completed. Fixed sizing and alignment issues with about section

--- a/style.css
+++ b/style.css
@@ -154,7 +154,6 @@ section {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 77vw;
     background-color: transparent;
     justify-content: center;
 
@@ -283,9 +282,7 @@ section {
     box-shadow:  24px 24px 48px #afafaf,
     -24px -24px 48px #ffffff;
     margin: 25px 0;
-    min-height: 515px;
     overflow: hidden;
-    height: 64vmin;
     width: 50vmin;
     border-radius: 35px;
     border-color: black;
@@ -296,12 +293,15 @@ section {
     border-bottom: 4px solid #dfdfe5;
     width: 50vmin;
     overflow: hidden;
+    aspect-ratio: 16/9;
+    object-fit: cover;
 }
 
 .card-text {
     display: flex;
     text-align: center;
     flex-direction: column;
+    align-content: center;
 }
 
 .card-description {
@@ -312,12 +312,14 @@ section {
 
 .card_link_boarder {
     display: flex;
-    align-items: center;
+    align-self: center;
     justify-content: center;
     gap: 1rem;
     margin: 1rem;
     background-color: #dfdfe5;
     border-radius: 2rem;
+    height: 6vmin;
+    width: 50%;
 }
 
 .card-link-text {
@@ -325,8 +327,7 @@ section {
     color: black;
     text-decoration: none;
     text-decoration-color: white;
-    font-size: 3vmin;
-    margin: 2rem auto;
+    font-size: 2.5vmin;
     padding: 0.5rem;
 }
 
@@ -340,6 +341,8 @@ section {
 
 .contact-info-upper-container {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     border-radius: 2rem;
     border-color: rgb(163, 163, 163);
